--- a/index.html
+++ b/index.html
@@ -4,21 +4,23 @@
   <meta charset="utf-8">
   <title>Modular nav</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/type.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
+  <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
   <header class="pad-b-1-2">
-    <div class="grid">
+    <div class="grid grid-middle">
       <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-content-center">
         <h1 class="text-center tera">Solar System</h1>
       </div>
       <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-content-center">
         <nav class="text-center">
-          <a class="island-1-2 mega" href="#">Planets</a>
-          <a class="island-1-2 mega" href="#">Moons</a>
-          <a class="island-1-2 mega" href="#">Exploration</a>
+          <ul>
+            <li><a class="island-1-2 mega" href="#">Planets</a></li>
+            <li><a class="island-1-2 mega" href="#">Moons</a></li>
+            <li><a class="island-1-2 mega" href="#">Exploration</a></li>
+          </ul>
         </nav>
       </div>
     </div>
